--- a/tutorials/train.ipynb
+++ b/tutorials/train.ipynb
@@ -17,7 +17,7 @@
     "# and prints the mean relative rms error when evaluated on the parameter values of the 1,704 signals in the test set\n",
     "\n",
     "emulator_21cmGEM = Global21cmLSTM.emulator_21cmGEM.Emulate() # initialize emulator for 21cmGEM data\n",
-    "emulator_21cmGEM.emulator.summary() # print architecture and characterisitcs of the network to train\n",
+    "emulator_21cmGEM.emulator.summary() # print architecture and characteristics of the network to train\n",
     "\n",
     "loss_mse = 'mse' # using MSE loss function for training\n",
     "learning_rate = 0.001 # using default for Keras Adam optimizer\n",
